fix: improve explanation

--- a/docs/key-topics/project-organisation.mdx
+++ b/docs/key-topics/project-organisation.mdx
@@ -34,7 +34,7 @@ The following diagram shows the project organisation in a simplified and clear m
   alt="Nice image"
 />
 
-If we were to translate the above diagram into a directory tree, we would end up with the following:
+If we were to translate the above diagram into a simplified directory tree, we would end up with the following:
 
 ```
 .
@@ -55,7 +55,11 @@ If we were to translate the above diagram into a directory tree, we would end up
 └── (...)
 ```
 
-Packages **1a**, **1b**, and **1c** are located in the `Project Application 1/code` folder, and the **2a** and **2b** in `Project Application 2/code`. As seen in the diagram above, these projects are also using shared packages `shared-package-1` and `shared-package-2`, and these are located in a separate `packages` folder.
+Packages **1a**, **1b**, and **1c** are located in the `Project Application 1/code` folder, and the **2a** and **2b** in `Project Application 2/code`. And, as seen in the diagram above, Project Application 1 is using the shared package `shared-package-1`, and Project Application 2 both `shared-package-1` and `shared-package-2`. These shared packages are located in a separate `packages` folder.
+
+:::info
+The name of the `packages` folder is arbitrary. For example, we could've also name it as `shared`, `global`, or maybe `utils` instead.
+:::
 
 ## Important Characteristics
 Here are some of the most important characteristics of packages and applications.
