--- a/docs/tutorials/headless-cms/create-a-webiny-headless-cms-address-field-plugin.mdx
+++ b/docs/tutorials/headless-cms/create-a-webiny-headless-cms-address-field-plugin.mdx
@@ -171,7 +171,13 @@ And the resolver for that field:
 read: {
     createResolver({ field }) {
         return instance => {
-            const {address, coordinates} = instance.values[field.fieldId];
+            const value = instance.values[field.fieldId];
+            // there is a possibility that value is not populated
+            // so we cannot destructure the object because code will break
+            if (!value) {
+                return {};
+            }
+            const {address, coordinates} = value;
             const {country, city, zipCode, street, streetNumber} = address;
             return {
                 country,
