wip: create project-related articles

--- a/docs/key-topics/deployment/iac-with-pulumi.mdx
+++ b/docs/key-topics/deployment/iac-with-pulumi.mdx
@@ -1,21 +1,24 @@
 ---
-id: iac-with-pulumi1
+id: iac-with-pulumi
 title: Infrastructure as code with Pulumi
 sidebar_label: IaC with Pulumi
 keywords: ["webiny", "stacks", "deployment", "pulumi", "iac"]
 description: Infrastructure as Code with Pulumi
 ---
 
-import Theme from "../mdxComponents/theme";
+import Theme from "../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
-This key topic
-
----
+:::tip What you’ll learn
+- what is Pulumi
+- how is Webiny utilizing Pulumi with your project applications
+- what are state files
+- what are backends
+:::
 
 ## Why Pulumi?
 
-For defining and deploying necessary cloud infrastructure for a [project application](/docs/key-topics/project-applications/overview), by default, Webiny relies on [Pulumi](https://www.pulumi.com/), a modern [infrastructure as code (IaC)](https://docs.aws.amazon.com/whitepapers/latest/introduction-devops-aws/infrastructure-as-code.html) solution.
+For defining and deploying necessary cloud infrastructure for your [project applications](/docs/key-topics/project-applications), by default, Webiny relies on [Pulumi](https://www.pulumi.com/), a modern [infrastructure as code (IaC)](https://docs.aws.amazon.com/whitepapers/latest/introduction-devops-aws/infrastructure-as-code.html) solution.
 
 Webiny chose Pulumi as its default IaC solution for a couple of reasons:
 
@@ -30,7 +33,7 @@ Note that Pulumi is the _default_ solution Webiny relies on, which means it does
 
 ## A closer look
 
-In the following folder structure, we are looking at three applications that are set up by default in a new Webiny project. These are the API (`./api`), Admin Area (`./apps/admin`), and Public Website (`./apps/site`), which are shown in the following directory structure:
+In the following folder structure, we are looking at three applications that are set up by default in a new Webiny project. These are the **api** (`./api`), **admin** (`./apps/admin`), and **website** (`./apps/site`), which are shown in the following directory structure (`code` folder omitted for brevity):
 
 ```
 .
@@ -57,19 +60,19 @@ In the following folder structure, we are looking at three applications that are
 Let's examine how these applications are utilizing Pulumi in order to define and deploy needed cloud infrastructure resources.
 
 :::info
-Three key Pulumi related terms, that we're using in the following text, are: Pulumi [project](https://www.pulumi.com/docs/intro/concepts/project/), [program](https://www.pulumi.com/docs/intro/concepts/programming-model/#programs), and [stack](https://www.pulumi.com/docs/intro/concepts/stack/). Check out their [Programming Model](https://www.pulumi.com/docs/intro/concepts/programming-model/) article to learn more.
+Three key Pulumi related concepts, that we're using in the following text, are: Pulumi [project](https://www.pulumi.com/docs/intro/concepts/project/), [program](https://www.pulumi.com/docs/intro/concepts/programming-model/#programs), and [stack](https://www.pulumi.com/docs/intro/concepts/stack/). Check out their [Programming Model](https://www.pulumi.com/docs/intro/concepts/programming-model/) article to learn more.
 :::
 
 Each of these applications are standalone [Pulumi projects](https://www.pulumi.com/docs/intro/concepts/project/#projects), which essentially means two things:
 
-- every application contains its own infrastructure-related code ([Pulumi program](https://www.pulumi.com/docs/intro/concepts/programming-model/#programs)), configuration, meta, and state files
+- every application contains its own infrastructure-related code ([Pulumi program](https://www.pulumi.com/docs/intro/concepts/programming-model/#programs)), configuration, meta, and [state files](/docs/key-topics/iac-with-pulumi#state-files)
 - every application is deployed as a standalone unit (you cannot deploy two applications in a single operation)
 
 It's also important to know you can have multiple instances of your application's cloud infrastructure up and running at the same time. This is achieved via [Pulumi stacks](https://www.pulumi.com/docs/intro/concepts/stack/):
 
 > Every Pulumi program is deployed to a **stack**. A stack is an isolated, independently configurable instance of a Pulumi program. Stacks are commonly used to denote different phases of development (such as **development**, **staging** and **production**) or feature branches (such as **feature-x-dev**, **jane-feature-x-dev**).
 
-In the following section, we briefly cover the key files that form a Pulumi project. Note that if you want to dive deeper, you're certainly encouraged to visit the [official documentation](https://www.pulumi.com/docs/intro/concepts/) which explains these concepts in more detail.
+In the following section, we briefly cover the key files that form a Pulumi project, and can be found in your application folders. Note that if you want to dive deeper, you're certainly encouraged to visit the [official documentation](https://www.pulumi.com/docs/intro/concepts/) which explains these concepts in more detail.
 
 ## Project Files
 
@@ -133,7 +136,7 @@ export const cognitoAppClientId = cognito.userPoolClient.id;
 export const updatePbSettingsFunction = pageBuilder.functions.updateSettings.arn;
 ```
 
-Doing this can be useful if, for example, one or more applications depend on these values.
+Doing this can be useful if, for example, one, or more applications depend on these values.
 
 **Is it possible to read stack output from another stack?**
 
