--- a/docs/key-topics/project-organisation.mdx
+++ b/docs/key-topics/project-organisation.mdx
@@ -13,16 +13,19 @@ import { Box, Button, Grid, Link } from "theme-ui";
 - what are the fundamental organisational units of every Webiny project and their most important characteristics
 :::
 
+<!--
+## Webiny Project
+Everything starts with a **Webiny project**, which is what gets created for you (on your local file system) in the [Webiny Installation](/docs/tutorials/install-webiny) process. This is the top organisational unit, which is made of packages and project applications.
+-->
 
-## Overview
-
+## Packages and project applications
 Every Webiny project consists of two fundamental organisation units - **packages** and **project applications** (or just **applications**).
 
 Packages are just regular [NPM packages](https://docs.npmjs.com/about-packages-and-modules#about-packages), or in other words, folders with its own `package.json` declaration file and some code.
 On the other hand, project applications are higher-level organisational units formed from one or more packages that, as the name itself suggest, form applications. Applications consist of both application code and cloud infrastructure that is needed in order to run them.
 
 :::info
-Visit the [Project Applications](/docs/key-topics/project-applications/overview) section to learn more about applications - what they consist of, what tools we use, how they are deployed, and more.
+Visit the [Project Applications](/docs/key-topics/project-applications) section to learn more about project applications.
 :::
 
 The following diagram shows the project organisation in a simplified and clear manner:
@@ -55,13 +58,13 @@ If we were to translate the above diagram into a simplified directory tree, we w
 └── (...)
 ```
 
-Packages **1a**, **1b**, and **1c** are located in the `Project Application 1/code` folder, and the **2a** and **2b** in `Project Application 2/code`. And, as seen in the diagram above, Project Application 1 is using the shared package `shared-package-1`, and Project Application 2 both `shared-package-1` and `shared-package-2`. These shared packages are located in a separate `packages` folder.
+Packages **1a**, **1b**, and **1c** are located in the `Project Application 1/code` folder, and the **2a** and **2b** in `Project Application 2/code`. And, as seen in the diagram above, **Project Application 1** is using the shared package `shared-package-1`, and **Project Application 2** both `shared-package-1` and `shared-package-2`. These shared packages are located in a separate `packages` folder.
 
 :::info
-The name of the `packages` folder is arbitrary. For example, we could've also name it as `shared`, `global`, or maybe `utils` instead.
+The name of the `packages` folder is arbitrary and at this point, not important.
 :::
 
-## Important Characteristics
+### Important Characteristics
 Here are some of the most important characteristics of packages and applications.
 
 #### Package scope
@@ -88,20 +91,9 @@ The same can happen with project applications. For example, let's say you have a
   alt="Nice image"
 />
 
-## Monorepo organisation
-
-Every Webiny project is structured as a [monorepo](https://www.atlassian.com/git/tutorials/monorepos), using [yarn workspaces](https://classic.yarnpkg.com/en/docs/workspaces/).
-
-This benefits us in a couple of ways. Most importantly, it makes sure downloaded packages are stored in a most efficient way. It also makes it possible to organize different logical sections of your project as multiple packages, and easily import them from any other package (application).
-
-:::info
-Webiny CLI provides the `webiny workspaces` command, which makes it a bit easier to perform commands across multiple workspaces. Be sure to check the [CLI Reference](#) or run `webiny workspaces --help` in your terminal for more information.
-:::
-
-
 ## FAQ
 
-**Can we use a different package manager, like yarn2 or NPM?**
+**Does Webiny enforce a strict files and folders organisation?**
 
-At the moment, Webiny projects are set up to work with [yarn 1](https://classic.yarnpkg.com/lang/en/), exclusively. This is simply because it and its `workspaces` functionality is still a solid solution.
-We've looked into [yarn 2](https://yarnpkg.com/), and [npm](https://docs.npmjs.com/cli/v6), but found these not to be as stable, and proven as we'd like them to be. We are definitely all-in when it comes to simplifying the development toolchain, but at this moment, that is simply not possible.
+No. You can organize your packages and project applications in any way you you see fit. For example, the folder in which you store your shared packages can be named in any way you like. You can have as many of those as needed, and can be organized in different folders, again, as you see fit. The same goes for project applications.
+
