--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -9,7 +9,10 @@ description: Learn how to create a new Webiny project and deploy it into your AW
 import Theme from "../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
-This tutorial covers how to create a brand new Webiny project, and how to deploy it to your [AWS](https://aws.amazon.com/) account. At the end of the tutorial, you end up with a deployed Webiny project, fully accessible over a couple of public URLs.
+:::tip WHAT YOU’LL LEARN
+- how to create a brand new Webiny project
+- how to deploy it to your [AWS](https://aws.amazon.com/) account
+:::
 
 ---
 
