fix: update keywords

--- a/docs/key-topics/deployment/iac-with-pulumi.mdx
+++ b/docs/key-topics/deployment/iac-with-pulumi.mdx
@@ -2,8 +2,8 @@
 id: iac-with-pulumi
 title: Infrastructure as code with Pulumi
 sidebar_label: IaC with Pulumi
-keywords: ["webiny", "stacks", "deployment", "pulumi", "iac"]
-description: Infrastructure as Code with Pulumi
+keywords: ["webiny", "deployment", "cloud", "infrastructure", "pulumi"]
+description: Learn what is Pulumi and how Webiny is utilizing it with your project applications.
 ---
 
 import Theme from "../../mdxComponents/theme";
