--- a/docs/key-topics/project-applications.mdx
+++ b/docs/key-topics/project-applications.mdx
@@ -2,8 +2,8 @@
 id: project-applications
 title: Project Applications
 sidebar_label: Project Applications
-keywords: ["webiny", "project", stacks"]
-description: Stacks
+keywords: ["project", "applications", "deployment"]
+description: Learn what are project applications and how they're structured.
 ---
 
 import Theme from "../mdxComponents/theme";
