--- a/docs/key-topics/project-organisation.mdx
+++ b/docs/key-topics/project-organisation.mdx
@@ -2,8 +2,8 @@
 id: project-organisation
 title: Project Organisation
 sidebar_label: Project Organisation
-keywords: ["webiny", "serverless", "open source", "graphql", "reactjs"]
-description: Installing Webiny on your AWS cloud.
+keywords: ["webiny", "project", "organisation", "packages", "applications"]
+description: Learn about fundamental organisational units of every Webiny project.
 ---
 
 import Theme from "../mdxComponents/theme";
