fix: replace "organisation" with "organization"

--- a/docs/key-topics/__monorepo.mdx
+++ b/docs/key-topics/__monorepo.mdx
@@ -1,6 +1,6 @@
 WIP
 
-### Monorepo organisation
+### Monorepo organization
 
 Every Webiny project is structured as a [monorepo](https://www.atlassian.com/git/tutorials/monorepos), using [yarn workspaces](https://classic.yarnpkg.com/en/docs/workspaces/).
 
