--- a/docs/key-topics/project-organisation.mdx
+++ b/docs/key-topics/project-organisation.mdx
@@ -1,37 +1,37 @@
 ---
-id: project-organisation
-title: Project Organisation
-sidebar_label: Project Organisation
-keywords: ["webiny", "project", "organisation", "packages", "applications"]
-description: Learn about fundamental organisational units of every Webiny project.
+id: project-organization
+title: Project organization
+sidebar_label: Project organization
+keywords: ["webiny", "project", "organization", "packages", "applications"]
+description: Learn about fundamental organizational units of every Webiny project.
 ---
 
 import Theme from "../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you’ll learn
-- what are the fundamental organisational units of every Webiny project and their most important characteristics
+- what are the fundamental organizational units of every Webiny project and their most important characteristics
 :::
 
 <!--
 ## Webiny Project
-Everything starts with a **Webiny project**, which is what gets created for you (on your local file system) in the [Webiny Installation](/docs/tutorials/install-webiny) process. This is the top organisational unit, which is made of packages and project applications.
+Everything starts with a **Webiny project**, which is what gets created for you (on your local file system) in the [Webiny Installation](/docs/tutorials/install-webiny) process. This is the top organizational unit, which is made of packages and project applications.
 -->
 
 ## Packages and project applications
-Every Webiny project consists of two fundamental organisation units - **packages** and **project applications** (or just **applications**).
+Every Webiny project consists of two fundamental organizational units - **packages** and **project applications** (or just **applications**).
 
 Packages are just regular [NPM packages](https://docs.npmjs.com/about-packages-and-modules#about-packages), or in other words, folders with its own `package.json` declaration file and some code.
-On the other hand, project applications are higher-level organisational units formed from one or more packages that, as the name itself suggest, form applications. Applications consist of both application code and cloud infrastructure that is needed in order to run them.
+On the other hand, project applications are higher-level organizational units formed from one or more packages that, as the name itself suggests, form applications. Applications consist of both application code and cloud infrastructure that is needed in order to run them.
 
 :::info
 Visit the [Project Applications](/docs/key-topics/project-applications) section to learn more about project applications.
 :::
 
-The following diagram shows the project organisation in a simplified and clear manner:
+The following diagram shows the project organization in a simplified and clear manner:
 
 <img
-  src={require("./assets/project-organisation/organisation.png").default}
+  src={require("./assets/project-organization/project-organization.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
   alt="Nice image"
@@ -69,7 +69,7 @@ Here are some of the most important characteristics of packages and applications
 
 #### Package scope
 
-A package can represent literally anything. From a simple JavaScript function, or a class, one, or more plugins, a whole REST/GraphQL API, or even a full-blown React app. You can even create utility packages that, for example, export one, or more utilities, and are imported by other packages (applications) in your project.
+A package can represent literally anything. From a simple JavaScript function or a class, one, or more plugins, a whole REST/GraphQL API, or even a full-blown React app. You can even create utility packages that, for example, export one, or more utilities, and are imported by other packages (applications) in your project.
 
 #### Limits
 
@@ -85,7 +85,7 @@ The same can happen with project applications. For example, let's say you have a
 
 
 <img
-  src={require("./assets/project-organisation/dependent-packages-apps.png").default}
+  src={require("./assets/project-organization/dependent-packages-apps.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
   alt="Nice image"
@@ -93,7 +93,7 @@ The same can happen with project applications. For example, let's say you have a
 
 ## FAQ
 
-**Does Webiny enforce a strict files and folders organisation?**
+**Does Webiny enforce strict files and folders organization?**
 
 No. You can organize your packages and project applications in any way you you see fit. For example, the folder in which you store your shared packages can be named in any way you like. You can have as many of those as needed, and can be organized in different folders, again, as you see fit. The same goes for project applications.
 
