--- a/docs/key-topics/project-applications.mdx
+++ b/docs/key-topics/project-applications.mdx
@@ -15,13 +15,13 @@ import { Box, Button, Grid, Link } from "theme-ui";
 
 ## The basics
 
-Webiny uses the term **project application** (or just **application**) in order to depict a specific logical segment of your project. Project applications are higher-level organisational units formed from one or more packages that, as the name itself suggest, form applications. Every application, essentially, consists of two pieces:
+Webiny uses the term **project application** (or just **application**) in order to depict a specific logical segment of your project. Project applications are higher-level organizational units formed from one or more packages that, as the name itself suggest, form applications. Every application, essentially, consists of two pieces:
 
 1. Your application code, which includes one or more Node.js packages. These packages can be anything from a simple GraphQL API or a single Lambda function, to a complete React application.
 2. Cloud infrastructure that hosts your code or which is being utilized by it, which is also described and deployed using code. For that matter, by default, Webiny relies on a solution called [Pulumi](/docs/key-topics/deployment/iac-with-pulumi), which is a modern infrastructure as code solution.
 
 :::info
-Learn more about the fundamental organisational units - project applications and packages, by visiting the [Project Organisation](/docs/key-topics/project-organisation) page.
+Learn more about the fundamental organizational units - project applications and packages, by visiting the [Project Organisation](/docs/key-topics/project-organization) page.
 :::
 
 Moving on, every application has its own folder. For example, in a newly created Webiny project, by default, you end up with three applications. The **api** (`./api`), which represents your project's (GraphQL) API, **admin** (`./apps/admin`), and finally, the **website** (`./apps/website`), which is your public website. These applications are shown in the following directory tree:
@@ -72,4 +72,4 @@ Each Webiny project can have any number of applications. This depends on the pro
 
 **Can applications work together?**
 
-Yes, and in most cases, [they are working together](/docs/key-topics/webiny-project/organisation#package-and-project-application-dependencies).
+Yes, and in most cases, [they are working together](/docs/key-topics/webiny-project/organization#package-and-project-application-dependencies).
