fix: correct grammar mistakes

--- a/docs/key-topics/deployment/iac-with-pulumi.mdx
+++ b/docs/key-topics/deployment/iac-with-pulumi.mdx
@@ -72,7 +72,7 @@ It's also important to know you can have multiple instances of your application'
 
 > Every Pulumi program is deployed to a **stack**. A stack is an isolated, independently configurable instance of a Pulumi program. Stacks are commonly used to denote different phases of development (such as **development**, **staging** and **production**) or feature branches (such as **feature-x-dev**, **jane-feature-x-dev**).
 
-In the following section, we briefly cover the key files that form a Pulumi project, and can be found in your application folders. Note that if you want to dive deeper, you're certainly encouraged to visit the [official documentation](https://www.pulumi.com/docs/intro/concepts/) which explains these concepts in more detail.
+In the following section, we briefly cover the key files that form a Pulumi project, that can be found in your application folders. Note that if you want to dive deeper, you're certainly encouraged to visit the [official documentation](https://www.pulumi.com/docs/intro/concepts/) which explains these concepts in more detail.
 
 ## Project Files
 
@@ -98,13 +98,13 @@ The `Pulumi.{stack-name}.yaml` file is a [Pulumi stack settings](https://www.pul
 
 #### `index.ts`
 
-This is the entrypoint file in which you start to define your infrastructure (the Pulumi program). You can organize the code in any way you like. For example, in the default API, Admin Area, and Public Website applications, the `index.ts` file just imports different classes, which encapsulate different cloud infrastructure segments. These classes can be found in the `pulumi` folder.
+This is the entry point file in which you start to define your infrastructure (the Pulumi program). You can organize the code in any way you like. For example, in the default API, Admin Area, and Public Website applications, the `index.ts` file just imports different classes, which encapsulate different cloud infrastructure segments. These classes can be found in the `pulumi` folder.
 
 ## State Files
 
-Except the files we mentioned in the previous section, there is also one other type of files the Pulumi produces. These are Pulumi project's state files.
+Except for the files we mentioned in the previous section, there is also one other group of files the Pulumi solution produces. These are Pulumi project's state files.
 
-These files describe at what state your cloud infrastructure is currently at. For example, it contains a list of all deployed resources, various meta data, configuration, and so on. State files are stored per Pulumi program stack, and by default, they are stored in your project application folder, inside the `.pulumi` folder.
+These files describe at what state your cloud infrastructure is currently at. For example, it contains a list of all deployed resources, various metadata, configuration, and so on. State files are stored per Pulumi program stack, and by default, they are stored in your project application folder, inside the `.pulumi` folder.
 
 ## Different Backends
 
@@ -124,7 +124,7 @@ Currently, Webiny is not using the [Automation API](https://www.pulumi.com/blog/
 
 **Is it possible to use a different infrastructure-as-code solution?**
 
-Yes, you can certainly use a different solution (for example [CloudFormation](https://aws.amazon.com/cloudformation/) or [Terraform](https://www.terraform.io/)). Feel free to [message us](https://www.webiny.com/slack) if you have this type of a need. We'd be glad to assist in that regard.
+Yes, you can certainly use a different solution (for example [CloudFormation](https://aws.amazon.com/cloudformation/) or [Terraform](https://www.terraform.io/)). Feel free to [message us](https://www.webiny.com/slack) if you have this type of need. We'd be glad to assist in that regard.
 
 **What is stack output?**
 
