--- a/docs/key-topics/project-applications.mdx
+++ b/docs/key-topics/project-applications.mdx
@@ -15,9 +15,9 @@ import { Box, Button, Grid, Link } from "theme-ui";
 
 ## The basics
 
-Webiny uses the term **project application** (or just **application**) in order to depict a specific logical segment of your project. Project applications are higher-level organizational units formed from one or more packages that, as the name itself suggest, form applications. Every application, essentially, consists of two pieces:
+Webiny uses the term **project application** (or just **application**) in order to depict a specific logical segment of your project. Project applications are higher-level organizational units formed from one or more packages that, as the name itself suggests, form applications. Every application, essentially, consists of two pieces:
 
-1. Your application code, which includes one or more Node.js packages. These packages can be anything from a simple GraphQL API or a single Lambda function, to a complete React application.
+1. Your application code, which includes one or more Node.js packages. These packages can be anything from a simple GraphQL API or a single Lambda function to a complete React application.
 2. Cloud infrastructure that hosts your code or which is being utilized by it, which is also described and deployed using code. For that matter, by default, Webiny relies on a solution called [Pulumi](/docs/key-topics/deployment/iac-with-pulumi), which is a modern infrastructure as code solution.
 
 :::info
@@ -56,9 +56,9 @@ If we take a look at the directory tree above, we can notice a consistent files 
 
 As mentioned, every application consists of your code and cloud infrastructure (also described via code).
 
-The `code` folder is where all of the application's code is located. In case of the `api` (`./api/code`), it contains several packages that form the GraphQL API. In case of `admin` (`./apps/admin/code`) and `website` (`./apps/website/code`), it contains React applications.
+The `code` folder is where all of the application's code is located. In the case of the `api` (`./api/code`), it contains several packages that form the GraphQL API. In case of `admin` (`./apps/admin/code`) and `website` (`./apps/website/code`), it contains React applications.
 
-On the other hand, the `pulumi` folder and the `Pulumi.yaml`, `Pulumi.dev.yaml`, and `index.ts` files contain Pulumi code that define your cloud infrastructure. Again, in case of the `api` application, these define several cloud infrastructure resources like Lambda functions, an API Gateway, a DynamoDB table, and so on. The `admin` and `website` applications contain fewer cloud resources, as they serve a bit simple (but still important) purpose.
+On the other hand, the `pulumi` folder and the `Pulumi.yaml`, `Pulumi.dev.yaml`, and `index.ts` files contain Pulumi code that define your cloud infrastructure. Again, in the case of the `api` application, these define several cloud infrastructure resources like Lambda functions, an API Gateway, a DynamoDB table, and so on. The `admin` and `website` applications contain fewer cloud resources, as they serve a bit simple (but still important) purpose.
 
 :::info
 To learn more about the necessary cloud infrastructure resources Webiny is relying on, check out the [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure) page.
@@ -68,7 +68,7 @@ To learn more about the necessary cloud infrastructure resources Webiny is relyi
 
 **How many applications can a single Webiny project have?**
 
-Each Webiny project can have any number of applications. This depends on the project requirements that are in front of you.
+Every Webiny project can have any number of applications. This depends on the project requirements that are in front of you.
 
 **Can applications work together?**
 
