fix(headless-cms): rephrase the tutorial narrative sentence

--- a/docs/tutorials/headless-cms/create-a-webiny-headless-cms-address-field-plugin.mdx
+++ b/docs/tutorials/headless-cms/create-a-webiny-headless-cms-address-field-plugin.mdx
@@ -14,21 +14,29 @@ description: Create a Webiny Headless CMS address field plugin.
 :::
 
 ## Overview
-A detailed and more in-depth explanation and how-to for a Webiny Headless CMS field plugins. The tutorial example is the idea you need to search for some address and get it's coordinates.
+A detailed and more in-depth explanation and how-to for a Webiny Headless CMS field plugins.
+The tutorial example is the idea you need to search for some address and get the coordinates of the address.
 In this tutorial we assume that you know how Webiny plugins work.
 
+:::info
 For quick info on required plugins check our [How-to Guide: Create a Webiny Headless CMS field plugin](/docs/how-to-guides/headless-cms/create-a-webiny-headless-cms-field-plugin).
+:::
 
 ## Tutorial narrative
-You need a field that gives you a functionality to search for an address via Google Maps API. When you select the address information (for example: coordinates) are set also set in the data. Also, you do not want to index that field and you want to encrypt it before saving into the storage.
+You need a field that gives you a functionality to search for an address via Google Maps API.
+When you select the address you want, from the list the Google Maps API provided, it is set to the form data.
+Also, you do not want to index that field, and you want to encrypt it before saving into the storage.
 
 ## The placement of the plugins
 
-By all means, you can create plugins where ever you want - but try to stick to some structure. You have `api` and `apps` directories, so put your plugins in those, according to a plugin type. Our suggestion would be something like this:
+By all means, you can create plugins where ever you want - but try to stick to some structure.
+You have `api` and `apps` directories, so put your plugins in those, according to a plugin type.
+Our suggestion would be something like this:
 1. `[UI]` plugins folder - `apps/admin/code/src/plugins/headlessCMS/fields/address/`
 2. `[API]` plugins folder - `api/code/headlessCMS/src/fields/address/`
 
-Your field type is a name of the directory containing all the plugins for that type. Remember, there are multiple types of plugins for a single field type in both UI and API side.
+Your field type is a name of the directory containing all the plugins for that type.
+Remember, there are multiple types of plugins for a single field type in both UI and API side.
 
 Files we are creating are:
 1. `addressFieldPlugin.ts` - API field definition
