chore: ignore irrelevant vale errors

--- a/docs/key-topics/project-applications.mdx
+++ b/docs/key-topics/project-applications.mdx
@@ -24,7 +24,12 @@ Webiny uses the term **project application** (or just **application**) in order 
 Learn more about the fundamental organizational units - project applications and packages, by visiting the [Project Organisation](/docs/key-topics/project-organization) page.
 :::
 
-Moving on, every application has its own folder. For example, in a newly created Webiny project, by default, you end up with three applications. The **api** (`./api`), which represents your project's (GraphQL) API, **admin** (`./apps/admin`), and finally, the **website** (`./apps/website`), which is your public website. These applications are shown in the following directory tree:
+<!-- vale off -->
+Moving on, every application has its own folder. For example, in a newly created Webiny project, by default, you end up with three applications.
+The **api** (`./api`), which represents your project's (GraphQL) API, **admin** (`./apps/admin`), and finally, the **website** (`./apps/website`), which is your public website.
+<!-- vale on -->
+
+These applications are shown in the following directory tree:
 
 ```
 .
