--- a/docs/key-topics/project-organisation.mdx
+++ b/docs/key-topics/project-organisation.mdx
@@ -30,12 +30,16 @@ Visit the [Project Applications](/docs/key-topics/project-applications) section 
 
 The following diagram shows the project organization in a simplified and clear manner:
 
+<!-- vale off -->
+
 <img
   src={require("./assets/project-organization/project-organization.png").default}
   className="no-shadow"
   style={{ marginBottom: 20 }}
   alt="Nice image"
 />
+
+<!-- vale on -->
 
 If we were to translate the above diagram into a simplified directory tree, we would end up with the following:
 
@@ -83,6 +87,7 @@ In terms of packages, an example might be a utility (shared) package whose code 
 
 The same can happen with project applications. For example, let's say you have a simple HTTP API and a React app that's relying on it. In this case, the project application that's holding the React app depends on the project application that's holding the HTTP API.
 
+<!-- vale off -->
 
 <img
   src={require("./assets/project-organization/dependent-packages-apps.png").default}
@@ -91,9 +96,11 @@ The same can happen with project applications. For example, let's say you have a
   alt="Nice image"
 />
 
+<!-- vale on -->
+
 ## FAQ
 
 **Does Webiny enforce strict files and folders organization?**
 
-No. You can organize your packages and project applications in any way you you see fit. For example, the folder in which you store your shared packages can be named in any way you like. You can have as many of those as needed, and can be organized in different folders, again, as you see fit. The same goes for project applications.
+No. You can organize packages and project applications in any way you see fit. For example, the folder in which you store your shared packages can be named in any way you like. You can have as many of those as needed, and can be organized in different folders, again, as you see fit. The same goes for project applications.
 
