--- a/docs/key-topics/deployment/iac-with-pulumi.mdx
+++ b/docs/key-topics/deployment/iac-with-pulumi.mdx
@@ -33,7 +33,9 @@ Note that Pulumi is the _default_ solution Webiny relies on, which means it does
 
 ## A closer look
 
+<!-- vale off -->
 In the following folder structure, we are looking at three applications that are set up by default in a new Webiny project. These are the **api** (`./api`), **admin** (`./apps/admin`), and **website** (`./apps/site`), which are shown in the following directory structure (`code` folder omitted for brevity):
+<!-- vale on -->
 
 ```
 .
